--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adisonpulun/api-demo.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/adisonpulun/api-demo/issues"
+  },
+  "homepage": "https://github.com/adisonpulun/api-demo#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "engines": {
-    "node": "12.18.4",
-    "npm": "6.14.11"
+    "node" : "12.8.4",
+    "npm" : "6.14.11"
   }
 }
